# Auto-Match-Platform

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_all.bat  run_bot.bat
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20241214_000000_0001_initial_postgis_setup.py  20241214_000001_0002_create_all_models.py  20241214_000002_0003_add_is_admin_field.py  20241214_000003_0004_add_free_limits_fields.py  20251214_230000_add_user_limits_fields.py  20251214_231000_add_global_settings_table.py  20251215_000001_add_auto_tables.py  20251216_000001_add_payments_table.py  20251216_000002_add_chat_columns.py  20251216_000002_add_recommended_listings.py
app/admin/: routes.py
app/api/: deps.py  main.py  responses.py
app/api/v1/: admin.py  auth.py  chats.py  listings.py  matches.py  media.py  payments.py  reference.py  requirements.py  router.py  users.py
app/bot/: __init__.py  bot.py  config.py  main.py  states.py
app/bot/handlers/: __init__.py  auto.py  chat.py  common.py  listing.py  onboarding.py  requirement.py  subscription.py  vip.py
app/bot/keyboards/: __init__.py  builders.py  callbacks.py
app/bot/middlewares/: __init__.py  auth.py  i18n.py  throttling.py
app/bot/translations/: az.json  en.json  ru.json
app/core/: cache.py  config.py  database.py  security.py  validators.py
app/models/: __init__.py  auto.py  chat.py  listing.py  match.py  payment.py  recommended.py  reference.py  requirement.py  settings.py  user.py
app/repositories/: __init__.py  auto.py  base.py  chat.py  listing.py  match.py  requirement.py  settings.py  user.py
app/schemas/: __init__.py  admin.py  chat.py  common.py  listing.py  match.py  reference.py  requirement.py  subscription.py  user.py
app/services/: __init__.py  auto.py  chat.py  listing.py  match.py  media.py  notification.py  payriff.py  requirement.py  subscription.py  user.py
app/services/matching/: __init__.py  duplicate.py  engine.py  image_hash.py  scorer.py
app/workers/: jobs.py  main.py
crm/: index.html  tailwind.config.ts  vite.config.ts
crm/src/: App.tsx  index.css
crm/src/components/: Header.tsx  LimitsTab.tsx  ModerationTab.tsx  RecommendedTab.tsx  StatCard.tsx  StatisticsTab.tsx  SubscriptionsTab.tsx  TabNavigation.tsx  UsersTab.tsx
crm/src/components/ui/: badge.tsx  button.tsx
crm/src/pages/: Index.tsx  Login.tsx
tests/: __init__.py  conftest.py  test_api_pbt.py  test_integration.py  test_matching_pbt.py  test_models_unit.py  test_performance.py  test_repositories_pbt.py  test_services_pbt.py  test_validators_pbt.py
